test/fail/type_error/bad_assign.amla
func bad_assignment(x: i32) {
	y :str = x;
}
